argocd/sandbox-http-server-go/http-server-deployment.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: sandbox-http-server-go-svc
  labels:
    app: sandbox-http-server-go
spec:
  type: ClusterIP
  selector:
    app: sandbox-http-server-go
  ports:
    - port: 8080
      protocol: TCP
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: sandbox-http-server-go-deployment
spec:
  selector:
    matchLabels:
      app: sandbox-http-server-go
  template:
    metadata:
      labels:
        app: sandbox-http-server-go
    spec:
      containers:
        - name: sandbox-http-server-go-container
          image: ghcr.io/pollenjp/sandbox-http-server-go:0.1.16
          imagePullPolicy: Always
          resources:
            limits:
              memory: "128Mi"
              cpu: "500m"
          ports:
            - containerPort: 8080
